Fix video playback on mobile - replace Google Drive iframe embeds with HTML5 video tags

--- a/css/styles.css
+++ b/css/styles.css
@@ -702,7 +702,8 @@ footer p {
   margin-top: 1rem;
 }
 
-.video-wrapper iframe {
+.video-wrapper iframe,
+.video-wrapper video {
   position: absolute;
   top: 0;
   left: 0;
